syntax = "proto3";

package websocket;

import "core.proto";

message InitFrame {
    string zid = 1; // the student's zID
    string token = 2; // the student's token, used to login to the server
}

message Task {
    string id = 1;
    oneof data {
        core.AutoTestSubmissionRequest autotest_submission_request = 2;
        core.AutoTestSubmissionResponse autotest_submission_response = 3;
        core.CheckStyleRequest check_style_request = 4;
        core.CheckStyleResponse check_style_response = 5;
        core.SubmissionRequest submission_request = 6;
        core.SubmissionResponse submission_response = 7;
    }
}

message SocketFrame {
    enum Opcode {
        AUTOTEST_SUBMISSION_REQUEST = 0;
        AUTOTEST_SUBMISSION_RESPONSE = 1;
        CHECK_STYLE_REQUEST = 2;
        CHECK_STYLE_RESPONSE = 3;
        SUBMISSION_REQUEST = 4;
        SUBMISSION_RESPONSE = 5;
    }
    Opcode opcode = 1;
    Task task = 2;
}
